examples/errors/invalid_cast_float_to_char/main.hd
fn main(): int {
    let f: float = 65.0;
    let c = f as char;
    return 0;
}
